--- a/src/mdx/posts/typeof.mdx
+++ b/src/mdx/posts/typeof.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'typeof演算子の戻り値'
+title: 'typeof演算子の返り値'
 excerpt: 'typeof演算子は、基本的には型名を示す文字列を返しますが、配列やnullの扱いなど注意すべき点もあります。'
 category: 'JavaScript'
 coverImage: '/img/typeof-ogp.png'
-coverImageAlt: 'JavaScriptカテゴリの「typeof演算子の戻り値」'
+coverImageAlt: 'JavaScriptカテゴリの「typeof演算子の返り値」'
 coverImageWidth: 1200
 coverImageHeight: 630
 published: '2020-10-5 8:5'
@@ -17,7 +17,7 @@ returnValue = typeof ___;
 if (typeof ___ === 'string') { /* 何か処理 */ }
 ```
 
-## typeof演算子への入力別戻り値
+## typeof演算子への入力別返り値
 
 | 種類 | 戻り値 | 当てはまる例 |
 | --- | --- | --- |
