--- a/src/mdx/posts/operator-precedence.mdx
+++ b/src/mdx/posts/operator-precedence.mdx
@@ -2,7 +2,7 @@
 title: '演算子の優先順位'
 excerpt: 'JavaScriptにおける演算子の優先順位表です。'
 category: 'JavaScript'
-coverImage: '/img/operator-precedence-ogp.png'
+coverImage: '/asset/ogp/operator-precedence.png'
 coverImageAlt: 'JavaScriptカテゴリの「演算子の優先順位」'
 coverImageWidth: 1200
 coverImageHeight: 630
@@ -55,9 +55,9 @@ JavaScriptの演算子の優先順位
 || `___ != ___` ||
 | 10 | `___ & ___` | ビットAND |
 | 9 | `___ ^ ___` | ビットXOR |
-| 8 | <span className="js_html_unescape">`___ &#x7c; ___`</span> | ビットOR |
+| 8 | <HTMLUnescape>`___ &#x7c; ___`</HTMLUnescape> | ビットOR |
 | 7 | `___ && ___` | 論理AND |
-| 6 | <span className="js_html_unescape">`___ &#x7c;&#x7c; ___`</span> | 論理OR |
+| 6 | <HTMLUnescape>`___ &#x7c;&#x7c; ___`</HTMLUnescape> | 論理OR |
 | 5 | `___ ?? ___` | Null合体 |
 | 4 | `___ ? ___ : ___` | 三項条件 |
 | 3 | `___ = ___` | 代入 |
@@ -72,9 +72,9 @@ JavaScriptの演算子の優先順位
 || `___ >>>= ___` ||
 || `___ &= ___` ||
 || `___ ^= ___` ||
-|| <span className="js_html_unescape">`___ &#x7c;= ___`</span> ||
+|| <HTMLUnescape>`___ &#x7c;= ___`</HTMLUnescape> ||
 || `___ &&= ___` ||
-|| <span className="js_html_unescape">`___ &#x7c;&#x7c;= ___`</span> ||
+|| <HTMLUnescape>`___ &#x7c;&#x7c;= ___`</HTMLUnescape> ||
 | 2 | `yield ___` | yield |
 || `yield* ___` | yield* |
 | 1 | `___ , ___` | 複数式のためのコンマ |
