--- a/src/mdx/posts/typeof.mdx
+++ b/src/mdx/posts/typeof.mdx
@@ -2,7 +2,7 @@
 title: 'typeof演算子の返り値'
 excerpt: 'typeof演算子は、基本的には型名を示す文字列を返しますが、配列やnullの扱いなど注意すべき点もあります。'
 category: 'JavaScript'
-coverImage: '/img/typeof-ogp.png'
+coverImage: '/asset/ogp/typeof.png'
 coverImageAlt: 'JavaScriptカテゴリの「typeof演算子の返り値」'
 coverImageWidth: 1200
 coverImageHeight: 630
@@ -22,7 +22,7 @@ if (typeof ___ === 'string') { /* 何か処理 */ }
 | 種類 | 戻り値 | 当てはまる例 |
 | --- | --- | --- |
 | 数値 | "number" | `635, -28.1, 1e3, 0x5fff, NaN, Infinity, Number('41')` |
-| 文字列 | "string" | <span className="js_html_unescape">`"foo bar'', "", &#x60;テンプレート文字列&#x60;, String(), Date()`</span> |
+| 文字列 | "string" | <HTMLUnescape>`"foo bar'', "", &#x60;テンプレート文字列&#x60;, String(), Date()`</HTMLUnescape> |
 | 真偽値 | "boolean" | `true, false, Boolean()` |
 | 配列 | "object" | `[], Array(), new Array()` |
 | Null | "object" | `null` |
