--- a/src/mdx/posts/new-date-tostring.mdx
+++ b/src/mdx/posts/new-date-tostring.mdx
@@ -69,17 +69,17 @@ dateObj = new Date('April 12, 2010 14:08:54');
     </div>
     <div>
         <dt>.toLocaleString([locales[, options]])</dt>
-        <dd><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat/DateTimeFormat" target="_blank" rel="nofollow noopener">引数での指定</a>に基づいた言語に合った形式で、Dateオブジェクトの内容全体を文字列として返します。</dd>
+        <dd><a href="/article/argument-locales">引数での指定</a>に基づいた言語に合った形式で、Dateオブジェクトの内容全体を文字列として返します。</dd>
         <dd>出力：<samp>2010/4/12 14:08:54</samp></dd>
     </div>
     <div>
         <dt>.toLocaleDateString([locales[, options]])</dt>
-        <dd><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat/DateTimeFormat" target="_blank" rel="nofollow noopener">引数での指定</a>に基づいた言語に合った形式で、Dateオブジェクトの年月日を文字列として返します。</dd>
+        <dd><a href="/article/argument-locales">引数での指定</a>に基づいた言語に合った形式で、Dateオブジェクトの年月日を文字列として返します。</dd>
         <dd>出力：<samp>2010/4/12</samp></dd>
     </div>
     <div>
         <dt>.toLocaleTimeString([locales[, options]])</dt>
-        <dd><a href="https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat/DateTimeFormat" target="_blank" rel="nofollow noopener">引数での指定</a>に基づいた言語に合った形式で、Dateオブジェクトの時分秒を文字列として返します。</dd>
+        <dd><a href="/article/argument-locales">引数での指定</a>に基づいた言語に合った形式で、Dateオブジェクトの時分秒を文字列として返します。</dd>
         <dd>出力：<samp>14:08:54</samp></dd>
     </div>
 </dl>
