--- a/src/mdx/posts/argument-locales.mdx
+++ b/src/mdx/posts/argument-locales.mdx
@@ -53,7 +53,7 @@ BCP47に基づいた言語を表す文字列、またはその配列での指定
 
 ### u-ca-何か
 
-`Intl.DateTimeFormat`でのみ使える、暦(calendar)の指定です。
+`Intl.DateTimeFormat`でのみ使える、紀年法(calendar)の指定です。
 
 ```js
 dateObj = new Date(2020, 11, 3, 4, 56, 7, 890);
