--- a/src/mdx/posts/css-percent-basis.mdx
+++ b/src/mdx/posts/css-percent-basis.mdx
@@ -42,6 +42,8 @@ div要素やp要素などはデフォルトで`display: block`、つまりブロ
 
 包括ブロックの幅
 
+`max-width`と`min-width`も同様です。
+
 ## height
 
 - 要素自身の`height`が`%`以外で指定されている
@@ -50,17 +52,19 @@ div要素やp要素などはデフォルトで`display: block`、つまりブロ
 
 のいずれかに当てはまるケースで、このプロパティの指定が効きます。
 
+`max-height`と`min-height`も同様です。
+
 ## margin
 
 包括ブロックの幅
 
-`margin-top`と`margin-bottom`も同様に、包括ブロックの幅
+`margin-top`と`margin-bottom`も同様に、包括ブロックの幅です。
 
 ## padding
 
 包括ブロックの幅
 
-`padding-top`と`padding-bottom`も同様に、包括ブロックの幅
+`padding-top`と`padding-bottom`も同様に、包括ブロックの幅です。
 
 ## top, bottom
 
@@ -86,4 +90,4 @@ div要素やp要素などはデフォルトで`display: block`、つまりブロ
 
 参考リンク
 
-- [encodeURIComponentが世界基準だと誤解してた話 - Qiita](https://qiita.com/shibukawa/items/c0730092371c0e243f62)
+- [CSS Box Sizing Module Level 3](https://drafts.csswg.org/css-sizing-3/#specifying-sizes)
