--- a/src/mdx/posts/object-array-methods.mdx
+++ b/src/mdx/posts/object-array-methods.mdx
@@ -3,11 +3,11 @@ title: 'オブジェクトでも配列のメソッドを使いたい(JavaScript)
 excerpt: 'オブジェクトの操作メソッドは配列に比べて少なすぎます。mapもfilterもfindもオブジェクトは使えません。そこで、配列のメソッドの一部が使えるラッパーオブジェクトを作りました。'
 category: 'JavaScript'
 coverImage: '/asset/ogp/object-array-methods.png'
-coverImageAlt: 'Otherカテゴリの「オブジェクトでも配列のメソッドを使いたい」'
+coverImageAlt: 'JavaScriptカテゴリの「オブジェクトでも配列のメソッドを使いたい」'
 coverImageWidth: 1200
 coverImageHeight: 630
-published: '2020-11-5 11:16'
-updated: '2020-11-5 11:16'
+published: '2020-11-7 21:16'
+updated: '2020-11-7 21:16'
 ---
 
 配列には[30以上のメソッドがあります](/article/array-methods#content__section_0)。一方でオブジェクトは、、、
