--- a/src/mdx/posts/input-size-case.mdx
+++ b/src/mdx/posts/input-size-case.mdx
@@ -42,4 +42,31 @@ inputText.removeAttribute('maxlength'); // これで制限がなくなる
 
 ### 見かけ上文字数が足らないケース
 
-「𩸽」(ホッケという魚)などのサロゲートペア文字は、文字列の`length`プロパティが`2`になるので、文字列の長さが思い通りに取得できなくなります。HTMLフォームでも同様に、1文字で長さ2文字分という扱いになってしまい、8文字まで入力できるフォームに「𩸽𩸽𩸽𩸽」の4文字までしか入力できません。
+「𩸽」(ホッケという魚)などのサロゲートペア文字は、1文字で長さ2文字分という扱いになってします。`"𩸽𩸽𩸽𩸽"`だけで8文字扱いなので、フォームの直接入力ではそれ以上文字を追加できません。
+
+```js
+inputElem.maxLength; // 8
+inputElem.value = '𩸽𩸽𩸽𩸽';
+```
+
+文字の中には、全く見えないものもあります。
+
+- ゼロ幅スペース (`"\u200b"`)
+- 単語結合子 (`"\u2060"`)
+- ゼロ幅接合子 (`"\u200d"`)
+- ゼロ幅非接合子 (`"\u200c"`)
+
+しかしながら、見えない文字であっても1つあたり1文字として扱われます。
+
+```js
+inputElem.maxLength; // 8
+inputElem.value = 'abcdefg\u200b';
+```
+
+出力は7文字に見えますが、フォームの直接入力ではそれ以上文字を追加できません。
+
+---
+
+参考リンク
+
+- [ゼロ幅 - Wikipedia](https://ja.wikipedia.org/wiki/%E3%82%BC%E3%83%AD%E5%B9%85)
