--- a/src/mdx/posts/function-expr-arrow.mdx
+++ b/src/mdx/posts/function-expr-arrow.mdx
@@ -86,7 +86,7 @@ fn.bind(navigator)(); // グローバルwindow
 (() => { /* 呼び出し用かっこを内側 ... エラー */ }());
 ```
 
-エラーにハマらないように、`function`でもかっこは外側に書くことをお勧めします。
+アロー関数に修正した時などでエラーにハマらないように、`function`でもかっこは外側に書くことをお勧めします。
 
 ## 共通するasync-awaitの許容
 
@@ -106,7 +106,7 @@ fn.bind(navigator)(); // グローバルwindow
 
 ## 共通するデフォルト引数の許容
 
-`function`式でもアロー関数でも、引数のデフォルト値を設定できます。アロー関数の場合、引数が一つだけでもかっこを省略できません。
+`function`式でもアロー関数でも、引数のデフォルト値を設定できます。アロー関数の場合、引数が一つだけの場合はかっこを省略できますが、デフォルト引数を使う場合は省略できません。
 
 ```js
 (function (param = 6) {
